--- a/.gitignore
+++ b/.gitignore
@@ -152,6 +152,13 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
+# Config files with API keys
+config.py
+config.ipynb
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
